objects/maps__DriveProfile__c.object
<CustomObject>
    <fields>
        <fullName>maps__Hazardous_Materials__c</fullName>
        <label>Hazardous Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__HeightUnits__c</fullName>
        <label>Height Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__LengthUnits__c</fullName>
        <label>Length Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__NumberOfAxles__c</fullName>
        <label>Number of Axles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__NumberOfTrailers__c</fullName>
        <label>Number of Trailers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ProfileType__c</fullName>
        <label>Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__WeightPerAxle__c</fullName>
        <formula>CASE(maps__WeightUnits__c,  
&quot;pounds&quot;, 
    (maps__Weight__c/maps__NumberOfAxles__c)/2000,  
&quot;kilos&quot;, 
    (maps__Weight__c/maps__NumberOfAxles__c)/1000,
    (maps__Weight__c/maps__NumberOfAxles__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight Per Axle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pounds</fullName>
                </value>
                <value>
                    <fullName>tons</fullName>
                </value>
                <value>
                    <fullName>kilos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__WidthUnits__c</fullName>
        <label>Width Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ft</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Maps Drive Profile</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Drive Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Drive Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>